--- a/index.html
+++ b/index.html
@@ -44,17 +44,26 @@
     <!-- Main Content -->
     <div class="content container text-center mt-4">
         <h4>Zer ikasten duzu?</h4>
-        <div class="d-flex justify-content-center">
-            <!-- Link to Ingeniaritza Informatikoa -->
-            <a href="pages/ing_informatikoa.html" class="btn btn-outline-primary m-2">
-                <i class="fas fa-laptop-code"></i> Ingeniaritza Informatikoa
-            </a>
 
-            <!-- Link to Inteligentzia Artifiziala -->
-            <a href="pages/inteligentzia_artifiziala.html" class="btn btn-outline-primary m-2">
-                <i class="fas fa-robot"></i> Adimen Artifiziala
-            </a>
-        </div>
+    <!-- Contenedor principal para botones -->
+    <div class="d-flex justify-content-center align-items-center mb-4">
+        <!-- Botón de Ingeniaritza Informatikoa -->
+        <a href="pages/ing_informatikoa.html" class="btn btn-outline-primary m-2">
+            <i class="fas fa-laptop-code"></i> Ingeniaritza Informatikoa
+        </a>
+        <!-- Botón de Adimen Artifiziala -->
+        <a href="pages/inteligentzia_artifiziala.html" class="btn btn-outline-primary m-2">
+            <i class="fas fa-robot"></i> Adimen Artifiziala
+        </a>
+    </div>
+
+    <!-- Contenedor principal para imágenes -->
+    <div class="d-flex justify-content-center align-items-center">
+        <!-- Imagen de Ingeniaritza Informatikoa -->
+        <img src="img/fakultatea.jpg" alt="Ingeniaritza Informatikoa" class="small-responsive-image m-2">
+        <!-- Imagen de Adimen Artifiziala -->
+        <img src="img/ia.jpg" alt="Adimen Artifiziala" class="small-responsive-image m-2">
+    </div>
 
 
         <h3>Zer da GrAL bat?</h3>
