--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,6 @@
 
     <!-- Main Content -->
     <div class="content container mt-4">
-        <h3 class="text-center">About Us</h3>
         <div class="list-group">
             <!-- Profile 1 -->
             <div class="d-flex align-items-center mb-4">
@@ -82,11 +81,10 @@
     <!-- Footer Text -->
     <div class="mt-4">
         <p style="font-size: 14px;">
-            Webgune hau GrALei buruzko informazioa eskaintzeko sortu da, batez ere Euskal Herriko Unibertsitateko (EHU)
+            Webgune hau GrALei buruzko informazioa eskaintzeko sortu da, Euskal Herriko Unibertsitateko (EHU)
             iturrietan oinarrituta. Gure helburua informazio hori modu errazean eta eskuragarrian zabaltzea da, betiere
             iturri ofizialak ordezkatzeko inolako asmorik gabe. Webgune hau eskola ariketa baten parte gisa eraiki dugu,
-            eta horregatik, edukiak prestakuntza helburuekin osatu dira. Talde egilearen izen-abizenak jarraian aurki
-            daitezke.
+            eta horregatik, edukiak prestakuntza helburuekin osatu dira. 
         </p>
     </div>
     </div>
