--- a/pages/ing_informatikoa.html
+++ b/pages/ing_informatikoa.html
@@ -165,10 +165,9 @@
                         <span>Lehenengo deialdia</span>
                     </div>
                     <div class="mt-4">
-                        <h5>Aurreko urteko defentsen memoriak</h5>
-                        <p>Adibide gisa, aurreko urteetan defendatutako memorien aukeraketa bat jasotzen da goiko estekan.</p>
+                        <h5>Hurrengo defentsen zerrenda</h5>
                         <a href="https://www.ehu.eus/documents/d/informatika-fakultatea/iig-nov" class="btn btn-outline-primary" target="_blank">
-                            Ikusi Memoriak
+                            Azaroko Defentsak
                         </a>
                     </div>
                 </div>
