--- a/pages/informazio_orokorra.html
+++ b/pages/informazio_orokorra.html
@@ -47,7 +47,11 @@
                 <strong>Ondorio etikoak:</strong> Ondorio etikoak dituzten lanek UPV/EHUren Etika Zerbitzuaren edo Etika Batzordearen onespena behar dute.<br><br>
                 <strong>Gogoeta eta jasangarritasuna:</strong> GRAL guztietan 200 hitzeko gogoeta bat beharrezkoa da, balio demokratikoei eta jasangarritasunari buruzkoa.<br><br>
                 <strong>Defentsa eta epaimahaia:</strong> Defentsa publikoa da, epaimahai batek ebaluatzen du, eta kalifikazioa 0-10 eskalan ematen da.<br><br>
-                <strong>Prozesuak:</strong> Memoria digitala entregatzea eta poster laburpen bat egitea gomendatzen da ikusgaitasuna hobetzeko.
+                <strong>Prozesuak:</strong> Memoria digitala entregatzea eta poster laburpen bat egitea gomendatzen da ikusgaitasuna hobetzeko..<br><br>
+                <a href="https://www.ehu.eus/documents/340468/2334257/Normativa_UPVEHU_eus"
+                        class="main-link">Araudi Orokorra</a>
+                <a href="https://www.ehu.eus/documents/340468/2334257/Evaluaci%C3%B3n+proyectos_eus/473a2bdd-4a38-4811-8fb7-7f22cb9790b4"
+                        class="main-link">Ebaluazio Irizpideak</a>
             </p>
             <img src="../img/ehu.jpg" alt="Descripción de la imagen" class="side-image">
         </div>
