--- a/pages/ing_informatikoa.html
+++ b/pages/ing_informatikoa.html
@@ -73,6 +73,8 @@
                     <li><strong>Memoria eta defentsa:</strong> GRAL memoria 60 orrialde ingurukoa izan behar da. Defentsa publikoa eta epaimahaiaren aurrean egingo da.</li>
                     <li><strong>Epaimahaia eta kalifikazioa:</strong> Epaimahaiak hiru kide ditu, eta kalifikazioa 0-10 eskalan ematen da. Ohorezko matrikulak %5en artean daude.</li>
                     <li><strong>Jasangarritasuna:</strong> GRALek jasangarritasuna, giza eskubideak, eta balio demokratikoak aztertzeko gogoeta bat izan behar dute.</li>
+                    <li><a href="https://www.ehu.eus/documents/d/informatika-fakultatea/normativa_iig_eu"
+                        class="main-link">Ingenieritza Informatikako GrAL araudi osoa </a></li>
                 </ul>
             </div>
 
