--- a/pages/inteligentzia_artifiziala.html
+++ b/pages/inteligentzia_artifiziala.html
@@ -70,6 +70,8 @@
                     <li><strong>Matrikula eta deialdiak:</strong> Ikasleek GRALa egiteko ikasturteko bi deialdi dituzte, defendatu ezean berriro matrikulatuz.</li>
                     <li><strong>Defentsa:</strong> Defentsa publikoa da, epaimahai batek ebaluatzen du, eta kalifikazioa 0-10 eskalan ematen da.</li>
                     <li><strong>Edukia:</strong> Memoria bat entregatu behar da, 60 orrialde ingurukoa izatea gomendatzen da, eranskinak kanpo.</li>
+                    <li><a href="https://www.ehu.eus/documents/d/informatika-fakultatea/normativa_aag_eu"
+                        class="main-link">Adimen Artifizialeko GrAL araudi osoa </a></li>
                 </ul>
             </div>
 
