--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
             margin: 0;
             padding: 0;
             color: #333;
+            background-color: #f4f4f4;
         }
 
         /* Navbar */
         .navbar {
-            background-color: #f8f9fa;
+            background-color: #e0e0e0;
         }
 
         /* Sidebar */
@@ -29,7 +30,7 @@
             left: -250px;
             width: 250px;
             height: 100%;
-            background-color: #f8f9fa;
+            background-color: #e0e0e0;
             transition: all 0.3s ease;
             z-index: 1000;
             padding-top: 20px;
@@ -51,7 +52,7 @@
         .header {
             position: relative;
             height: 100vh;
-            background: url('img/header-background.jpg') no-repeat center center/cover;
+            background: url('img/sarrera.jpg') no-repeat center center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -98,34 +99,37 @@
             color: #444;
         }
 
-        .text-image-container {
+        .button-container {
             display: flex;
-            align-items: center;
+            justify-content: center;
             gap: 20px;
-            margin-bottom: 30px;
+            margin-top: 30px;
         }
 
-        .text-image-container img {
-            max-width: 30%;
+        .button-container .option {
+            text-align: center;
+            cursor: pointer;
+        }
+
+        .button-container img {
+            width: 120px;
+            height: 120px;
+            object-fit: cover;
             border-radius: 10px;
+            margin-bottom: 10px;
+            transition: transform 0.3s ease;
         }
 
-        .text-image-container p {
-            flex: 1;
-            text-align: justify;
-            line-height: 1.8;
+        .button-container img:hover {
+            transform: scale(1.05);
         }
 
-        @media (max-width: 768px) {
-            .text-image-container {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .text-image-container img {
-                max-width: 80%;
-            }
+        .button-container p {
+            font-size: 1rem;
+            color: #333;
+            margin: 0;
         }
+
     </style>
 </head>
 
@@ -167,27 +171,26 @@
     <section class="main-content">
         <div class="container">
             <h3>Zer da GrAL bat?</h3>
-            <div class="text-image-container">
-                <img src="img/fakultatea.jpg" alt="Fakultatea">
-                <p>Gradu Amaierako Lana (GrAL) funtsezkoa da UPV/EHUko Ingeniaritza Informatikoko eta Adimen Artifizialeko
-                    ikasleen prestakuntzan. Banakako proiektu hau zuzendari baten edo gehiagoren gainbegiradapean garatzen
-                    da, eta karreran zehar eskuratutako ezagutzak eta trebetasunak modu praktikoan aplikatzeko aukera
-                    ematen du.</p>
-            </div>
-
-            <div class="text-image-container">
-                <p>GrALaren bidez, ikasleek ikasitakoa beren aukerako gai batean integratzeaz gain, pentsamendu kritikoa ere
-                    garatzen dute, arazo sozial, teknologiko eta etikoei buruz aztertuz eta hausnartuz.</p>
-                <img src="img/ia.jpg" alt="Adimen Artifiziala">
-            </div>
-
-            <div class="d-flex justify-content-center align-items-center mb-4">
-                <a href="pages/ing_informatikoa.html" class="btn btn-outline-primary m-2">
-                    <i class="fas fa-laptop-code"></i> Ingeniaritza Informatikoa
-                </a>
-                <a href="pages/inteligentzia_artifiziala.html" class="btn btn-outline-primary m-2">
-                    <i class="fas fa-robot"></i> Adimen Artifiziala
-                </a>
+            <p>Gradu Amaierako Lana (GrAL) funtsezkoa da UPV/EHUko Ingeniaritza Informatikoko eta Adimen Artifizialeko
+                ikasleen prestakuntzan. Banakako proiektu hau zuzendari baten edo gehiagoren gainbegiradapean garatzen
+                da, eta karreran zehar eskuratutako ezagutzak eta trebetasunak modu praktikoan aplikatzeko aukera
+                ematen du.</p>
+                
+            <h4>Zer graduko buruzko informazioa behar duzu?</h4>
+            
+            <div class="button-container">
+                <div class="option">
+                    <a href="pages/ing_informatikoa.html">
+                        <img src="img/informatika.jpg" alt="Ingeniaritza Informatikoa">
+                        <p>Ingeniaritza Informatikoa</p>
+                    </a>
+                </div>
+                <div class="option">
+                    <a href="pages/inteligentzia_artifiziala.html">
+                        <img src="img/ia.jpg" alt="Adimen Artifiziala">
+                        <p>Adimen Artifiziala</p>
+                    </a>
+                </div>
             </div>
         </div>
     </section>
