--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
             background-color: #e0e0e0;
         }
 
+        .navbar-text {
+            font-weight: bold;
+            font-size: 1.2em;
+            color: #2c2c2c;
+        }
+
         /* Sidebar */
         #sidebar {
             position: fixed;
@@ -30,10 +36,11 @@
             left: -250px;
             width: 250px;
             height: 100%;
-            background-color: #e0e0e0;
+            background-color: #fff; /* Cambié a blanco */
             transition: all 0.3s ease;
             z-index: 1000;
             padding-top: 20px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
         }
 
         #sidebar.show {
@@ -46,6 +53,29 @@
             right: 10px;
             cursor: pointer;
             font-size: 1.5rem;
+            color: #555; /* Gris medio */
+        }
+
+        .list-group-item {
+            border: none;
+            padding: 15px 20px;
+            color: #444; /* Gris oscuro para el texto */
+            background-color: #fff; /* Fondo blanco */
+            transition: all 0.3s ease;
+        }
+
+        .list-group-item.active {
+            background-color: #333; /* Gris oscuro */
+            color: white;
+        }
+
+        .list-group-item:hover {
+            background-color: #555; /* Gris medio */
+            color: white;
+        }
+
+        .list-group-flush.mt-auto {
+            margin-top: auto;
         }
 
         /* Header Section */
@@ -129,7 +159,6 @@
             color: #333;
             margin: 0;
         }
-
     </style>
 </head>
 
